--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
+        <meta charset ="utf-8" />
         <title> </title>
     </head>
     <body>
