Länksystem på plats

--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
         <title>Niclas sida</title>
     </head>
     <body>
-        <h1>Niclas samlingssida</h1>
+        <h1>Niclas startsida</h1>
+        <p>Välkommen hit!</p>
+        <ul>
+            <li>
+                <a href="index.html">Start</a>
+            </li>
+            <li>
+                <a href="pages/laborationer.html">Laborationer</a>
+            </li>
+            <li>
+                <a href="pages/presentation.html">Presentation</a>
+            </li>
+            <li>
+                <a href="pages/kontakt.html">Kontakt</a>
+            </li>
+            
+        </ul>
         <h2>Kursblogg</h2>
         <article>
             <header>Hello World!</header>
