--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -6,6 +6,20 @@
     </head>
     <!--Denna sida är till för att presentera mig själv för i första hand kursledningen och andra studenter. -->
     <body>
+        <ul>
+            <li>
+                <a href="../index.html">Start</a>
+            </li>
+            <li>
+                <a href="laborationer.html">Laborationer</a>
+            </li>
+            <li>
+                <a href="presentation.html">Presentation</a>
+            </li>
+            <li>
+                <a href="kontakt.html">Kontakt</a>
+            </li>
+        </ul>
         <h1>Några ord om mig</h1>
         <p>Det är få saker som är så pass glädjefullt som att ha löst ett riktigt svårt problem.
             Troligen var det av den anledningen som jag första gången sökte mig till universitetet.
