--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -40,23 +40,30 @@
             <li>Startsidan</li>
             <li>
                 Absoluta/Relativa sökvägar
-                <ol>
-                    <li>Skriv den absoluta sökvägen till filen bottom.html?</li>
-                    <p>Svar: www.server.se/www/html/pages/bottom.html</p>
-                    <li>Vilken är den relativa sökvägen från filen default.html till filen top.html?</li>
-                    <p>Svar: pages/top.html</p>
-                    <li>Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</li>
-                    <p>Svar: ../../index.html</p>
-                    <li>Vilken är den absoluta sökvägen till filen index.html?</li>
-                    <p>Svar: www.server.se/www/index.html</p>
-                    <li>Vilken är den relativa sökvägen från filen top.html till bottom.html?</li>
-                    <p>Svar: bottom.html</p>
-                    <li>Vilken är den relativa sökvägen från filen index.html till top.html?</li>
-                    <p>Svar: html/pages/top.html</p>
-                </ol>    
+                <dl>
+                    <dt>Skriv den absoluta sökvägen till filen bottom.html?</dt>
+                    <dd>Svar: www.server.se/www/html/pages/bottom.html</dd>
+                    <dt>Vilken är den relativa sökvägen från filen default.html till filen top.html?</dt>
+                    <dd>Svar: pages/top.html</dd>
+                    <dt>Vilken är den relativa sökvägen från filen bottom.html till filen index.html?</dt>
+                    <dd>Svar: ../../index.html</dd>
+                    <dt>Vilken är den absoluta sökvägen till filen index.html?</dt>
+                    <dd>Svar: www.server.se/www/index.html</dd>
+                    <dt>Vilken är den relativa sökvägen från filen top.html till bottom.html?</dt>
+                    <dd>Svar: bottom.html</dd>
+                    <dt>Vilken är den relativa sökvägen från filen index.html till top.html?</dt>
+                    <dd>Svar: html/pages/top.html</dd>
+                </dl>    
             </li>
             <li>Länkar och mer listor</li>
-            <li>Bilder</li>
+            <li>Bilder
+                <ul>
+                    <li><a href="presentation.html#niclas">Bild på Niclas</a></li>
+                    <li><a href="../index.html#logotyp">Logotyp</a></li>
+                    <li><a href="../index.html#blogg-vektor">Bloggbild</a></li>
+                </ul>
+            </li>
+            
             <li>Video</li>
             <li>Tabeller</li>
             <li>Formulär</li>
