--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -28,7 +28,7 @@
         <p>Med väldigt stor sannolikhet verkar det som att jag är obotlig när det kommer till att prova nya saker.
             Det är kul och givande att vara i nya situationer. 
         </p>
-        <img src="../pics/niclas.jpg" alt="Presentationsbild på Niclas"/>
+        <img src="../pics/niclas.jpg" alt="Presentationsbild på Niclas" id="niclas"/>
         <p>En bild på Niclas</p>
         <h2>Mitt vardagliga liv i listform</h2>
         
