--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
         <h2>Kursblogg</h2>
         
-        <article>
+        <article id="blogg-video">
             <h3>Video med Big Buck Bunny</h3>
             <p>Test i att lägga upp ett videoklipp.</p>
             <video controls poster="pics/rinkysplash.thumbnail.jpg" width="320" height="240" preload="none">
