Nu är laboration 1 klar

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -88,12 +88,12 @@
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>Arbetar</td>
+                    <td>Färdig</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Ej påbörjad</td>
+                    <td>Arbetar</td>
                     <td></td>
                 </tr>
              </tbody>
@@ -184,6 +184,9 @@
                     <li><a href="#tabell">Tabellen</a></li>
                 </ul>
             <li>Formulär</li>
+                <ul>
+                    <li><a href="kontakt.html#formulär">Formulär</a></li>
+                </ul>            
         </ol>
         
         <h3 id="lab2">Laboration 2 - En stiligare portal</h3>
