--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -93,7 +93,7 @@
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td>Arbetar</td>
+                    <td>Färdig</td>
                     <td></td>
                 </tr>
              </tbody>
