--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -66,8 +66,8 @@
         <h2>Några ord om varför jag följer den här kursen</h2>
             <p>Redan när jag själv gick i gymnasiet väcktes intresset för programmering.
                 Då var språket Pascal och vi gjorde några enkla program. Vidare har jag 
-                haft ett allmänt intresse för dator och provar gärna nya trender. Jag har
-                dock aldrig riktigt tagit mig tiden att sätta mig in ordentligt. För cirka
+                haft ett allmänt intresse för datorer och provar gärna nya trender inom området. 
+                Jag har dock aldrig riktigt tagit mig tiden att sätta mig in ordentligt. För cirka
                 två år sedan upptäckte jag denna kurs och tittade på någon föreläsning. Jag
                 fastnade för kursens upplägg och blev sugen på att söka mig till universitetet.
             </p>
