--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -25,7 +25,7 @@
             
             <fieldset>
                 <legend>Information om dig</legend>
-                <p>Namn: <input type="tex" name="namn" /></p>
+                <p>Namn: <input type="text" name="namn" /></p>
                 <select name="klass" size="1">
                     <option selected="selected">Vilken klass tillhör du?</option>
                     <option>HT13</option>
