--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset ="utf-8" />
         <title>Kontakt</title>
+        <link rel="stylesheet" type="text/css" href="../style/basic.css" />
     </head>
     <body>
         <ul>
