--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset ="utf-8" />
         <title>Laborationer</title>
+        <link rel="stylesheet" type="text/css" href="../style/basic.css" />
     </head>
     <body>
         <h1>Min laborationsportal</h1>
