--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset ="utf-8" />
         <title>Niclas sida</title>
-        <link rel="stylesheet" type="text/css" href="style/basic.css" />
+        <link rel="stylesheet" href="css/basic.css" />
     </head>
     <body>
         <h1>Niclas startsida</h1>
