--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Niclas presentation</title>
-        <link rel="stylesheet" type="text/css" href="../style/basic.css" />
+        <link rel="stylesheet" href="../css/basic.css" />
     </head>
     <!--Denna sida är till för att presentera mig själv för i första hand kursledningen och andra studenter. -->
     <body>
