--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -8,11 +8,14 @@
     </head>
     <!--Denna sida är till för att presentera mig själv för i första hand kursledningen och andra studenter. -->
     <body>
-        <div id="container">
-            <div id="header">
+        <div id="header">
+            <div id="headcontent">
                 <h1>Presentationssidan</h1>
+                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
             </div>
-            
+        </div>   
+        
+        <div id="container">
             <div id="navigation">
                 <ul>
                     <li>
@@ -22,7 +25,9 @@
                         <a href="laborationer.html">Laborationer</a>
                     </li>
                     <li>
-                        <a href="presentation.html">Presentation</a>
+                        <div id="thisSide">
+                            <a class="thisSide" href="presentation.html">Presentation</a>
+                        </div>    
                     </li>
                     <li>
                         <a href="kontakt.html">Kontakt</a>
