--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
         <link rel="stylesheet" href="css/basic.css" />
     </head>
     <body>
-        <div id="container">
-        
-            <div id="header">
-                <h1>Niclas startsida</h1>
-                <img src="pics/logo.png" alt="logotyp" id="logotyp" />
-                <p>Välkommen hit!</p>    
+        <div id="header">
+            <div id="headcontent">
+                <h1>Niclas kurssida</h1>
+                <img src="pics/logo.png" alt="logotyp" id="logotype" />
+                <p>Välkommen hit!</p>
             </div>
-            
+        </div>
+
+        <div id="container">
+
             <div id="navigation">
                 <ul>
                     <li>
-                        <a href="index.html">Start</a>
+                        <div id="thisSide">
+                            <a class="thisSide" href="index.html">Start</a>
+                        </div>
                     </li>
                     <li>
                         <a href="pages/laborationer.html">Laborationer</a>
