--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -7,11 +7,14 @@
         <link rel="stylesheet" href="../css/basic.css" />
     </head>
     <body>
-        <div id="container">
-            <div id="header">
+        <div id="header">
+            <div id="headcontent">
                 <h1>Kontakt</h1>
+                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
             </div>
-            
+        </div>    
+    
+        <div id="container">
             <div id="navigation">
                 <ul>
                     <li>
@@ -24,7 +27,9 @@
                         <a href="presentation.html">Presentation</a>
                     </li>
                     <li>
-                        <a href="kontakt.html">Kontakt</a>
+                        <div id="thisSide">
+                            <a class="thisSide" href="kontakt.html">Kontakt</a>
+                        </div>    
                     </li>
                 </ul>            
             </div>
