--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -7,11 +7,15 @@
         <link rel="stylesheet" href="../css/basic.css" />
     </head>
     <body>
-        <div id="container">
-            <div id="header">
+        <div id="header">
+            <div id="headcontent">
                 <h1>Min laborationsportal</h1>
+                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
                 <p>Här hittar du mina laborationer</p>
             </div>
+        </div>    
+    
+        <div id="container">
             
             <div id="navigation">
                 <ul>
@@ -19,7 +23,9 @@
                         <a href="../index.html">Start</a>
                     </li>
                     <li>
-                        <a href="laborationer.html">Laborationer</a>
+                        <div id="thisSide">
+                            <a class="thisSide" href="laborationer.html">Laborationer</a>
+                        </div>
                     </li>
                     <li>
                         <a href="presentation.html">Presentation</a>
