En aside och en del puts

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id="header">
             <div id="headcontent">
-                <h1>Niclas kurssida</h1>
                 <img src="pics/logo.png" alt="logotyp" id="logotype" />
+                <h1>Niclas kurssida</h1>
                 <p>Välkommen hit!</p>
             </div>
         </div>
@@ -95,6 +95,10 @@
                         jag gör och också publicera material som jag producerar.</p>
                     </section>
                 </article>
+            </div>
+            
+            <div id="aside">
+                <img src="pics/buss.jpg" alt="Bild på en buss." id="buss" />
             </div>
             
             <div id="footer">
