--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -9,9 +9,9 @@
     <body>
         <div id="header">
             <div id="headcontent">
-                <h1>Min laborationsportal</h1>
                 <img src="../pics/logo.png" alt="logotyp" id="logotype" />
-                <p>Här hittar du mina laborationer</p>
+                <h1>Min laborationsportal</h1>
+                <p>Här hittar du mina laborationer.</p>
             </div>
         </div>    
     
