--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -9,7 +9,7 @@
     <body>
         <div id="header">
             <div id="headcontent">
-                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
+                <div class="logo"></div>
                 <h1>Min laborationsportal</h1>
                 <p>Här hittar du mina laborationer.</p>
             </div>
