--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -10,7 +10,7 @@
     <body>
         <div id="header">
             <div id="headcontent">
-                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
+                <div class="logo"></div>
                 <h1>Presentationssidan</h1>
             </div>
         </div>   
