--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -9,7 +9,7 @@
     <body>
         <div id="header">
             <div id="headcontent">
-                <img src="../pics/logo.png" alt="logotyp" id="logotype" />
+                <div class="logo"></div>
                 <h1>Kontakt</h1>
             </div>
         </div>    
