Layout av listor och tabeller på gång

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -42,10 +42,10 @@
                 <h3>Laborationer</h3>
                 <ul>
                     <li>
-                        <a href="#lab1">Laboration 1</a>
+                        <p><a href="#lab1">Laboration 1</a></p>
                     </li>
                     <li>
-                        <a href="#lab2">Laboration 2</a>
+                        <p><a href="#lab2">Laboration 2</a></p>
                     </li>
                 </ul>
                 
@@ -72,48 +72,48 @@
                         <tr>
                             <td rowspan="9">1</td>
                             <td>1</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>5</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>6</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>7</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>8</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                         <tr>
                             <td>9</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-09-19</td>
                         </tr>
                      </tbody>
         
@@ -122,42 +122,42 @@
                         <tr>
                             <td rowspan="8">2</td>
                             <td>1</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>                
                         <tr>
                             <td>5</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>6</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>7</td>
-                            <td>Ej påbörjad</td>
+                            <td>Färdig</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>8</td>
-                            <td>Ej påbörjad</td>
+                            <td>Påbörjad</td>
                             <td></td>
                         </tr>                
                     </tbody>
@@ -189,24 +189,24 @@
                     <li>Länkar och mer listor</li>
                     <li>Bilder
                         <ul>
-                            <li><a href="presentation.html#niclas">Bild på Niclas</a></li>
-                            <li><a href="../index.html#logotyp">Logotyp</a></li>
-                            <li><a href="../index.html#blogg-vektor">Bloggbild</a></li>
+                            <li><p><a href="presentation.html#niclas">Bild på Niclas</a></p></li>
+                            <li><p><a href="../index.html#logotyp">Logotyp</a></p></li>
+                            <li><p><a href="../index.html#blogg-vektor">Bloggbild</a></p></li>
                         </ul>
                     </li>
                     <li>Video
                         <ul>
-                            <li><a href="../index.html#blogg-video">Blogginlägg om video</a></li>
+                            <li><p><a href="../index.html#blogg-video">Blogginlägg om video</a></p></li>
                         </ul>
                     </li>
                     <li>Tabeller
                         <ul>
-                            <li><a href="#tabell">Tabellen</a></li>
+                            <li><p><a href="#tabell">Tabellen</a></p></li>
                         </ul>
                     </li>
                     <li>Formulär
                         <ul>
-                            <li><a href="kontakt.html#formulär">Formulär</a></li>
+                            <li><p><a href="kontakt.html#formulär">Formulär</a></p></li>
                         </ul>
                     </li>
                 </ol>
