Puts inför laboration 2

--- a/index.html
+++ b/index.html
@@ -131,10 +131,13 @@
             </div>
             
             <div id="aside">
+                <header><h4>Några ord om bloggen</h4></header>
+                <p>Mitt namn är Niclas Evén och jag är student vid Linnéuniversitetet, webbprogrammerare. Bloggen har uppstått i kursen Webbteknisk introduktion där vi får lära oss grunderna i Html och CSS.</p>
                 <figure>
                     <img src="pics/niclas.jpg" alt="Presentationsbild på Niclas" id="niclas"/>
-                    <figcaption>Hej, mitt namn är Niclas Evén. Denna bloggs existens är beroende av att jag studerar Webbprogramering vid Linnéuniversitet. Vi har nämligen i uppgift att skapa bland annat en kurssida med blogg.</figcaption>
+                    <figcaption>En bild på mig!</figcaption>
                 </figure>
+                <p>Skulle du vara intresserad av att läsa kursen så kan jag varmt rekommendera att du tar dig en titt på kursens <a href="https://coursepress.lnu.se/program/webbprogrammerare/">sida</a>.</p>
             </div>
             
             <div id="footer">
