--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -4,7 +4,8 @@
         <meta charset ="utf-8" />
         <title>Kontakt</title>
         <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/basic.css" />
+        <link rel="stylesheet" href="../css/basic.css" media="screen" />
+        <link rel="stylesheet" href="../css/print.css" media="print" />
     </head>
     <body>
         <div id="header">
