--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <title>Niclas presentation</title>
         <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/basic.css" />
+        <link rel="stylesheet" href="../css/basic.css" media="screen" />
+        <link rel="stylesheet" href="../css/print.css" media="print" />
     </head>
     <!--Denna sida är till för att presentera mig själv för i första hand kursledningen och andra studenter. -->
     <body>
