--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <ul>
                     <li>
                         <div id="thisSide">
-                            <a class="thisSide" href="index.html">Start</a>
+                            <a class="start thisSide" href="index.html">Start</a>
                         </div>
                     </li>
                     <li>
-                        <a href="pages/laborationer.html">Laborationer</a>
+                        <a class="laborationer" href="pages/laborationer.html">Laborationer</a>
                     </li>
                     <li>
-                        <a href="pages/presentation.html">Presentation</a>
+                        <a class="presentation" href="pages/presentation.html">Presentation</a>
                     </li>
                     <li>
-                        <a href="pages/kontakt.html">Kontakt</a>
+                        <a class="kontakt" href="pages/kontakt.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
