--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -21,18 +21,18 @@
             <div id="navigation">
                 <ul>
                     <li>
-                        <a href="../index.html">Start</a>
+                        <a class="start" href="../index.html">Start</a>
                     </li>
                     <li>
                         <div id="thisSide">
-                            <a class="thisSide" href="laborationer.html">Laborationer</a>
+                            <a class="laborationer thisSide" href="laborationer.html">Laborationer</a>
                         </div>
                     </li>
                     <li>
-                        <a href="presentation.html">Presentation</a>
+                        <a class="presentation" href="presentation.html">Presentation</a>
                     </li>
                     <li>
-                        <a href="kontakt.html">Kontakt</a>
+                        <a class="kontakt" href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
