--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -19,17 +19,17 @@
             <div id="navigation">
                 <ul>
                     <li>
-                        <a href="../index.html">Start</a>
+                        <a class="start" href="../index.html">Start</a>
                     </li>
                     <li>
-                        <a href="laborationer.html">Laborationer</a>
+                        <a class="laborationer" href="laborationer.html">Laborationer</a>
                     </li>
                     <li>
-                        <a href="presentation.html">Presentation</a>
+                        <a class="presentation" href="presentation.html">Presentation</a>
                     </li>
                     <li>
                         <div id="thisSide">
-                            <a class="thisSide" href="kontakt.html">Kontakt</a>
+                            <a class="kontakt thisSide" href="kontakt.html">Kontakt</a>
                         </div>    
                     </li>
                 </ul>            
