--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -20,18 +20,18 @@
             <div id="navigation">
                 <ul>
                     <li>
-                        <a href="../index.html">Start</a>
+                        <a class="start" href="../index.html">Start</a>
                     </li>
                     <li>
-                        <a href="laborationer.html">Laborationer</a>
+                        <a class="laborationer" href="laborationer.html">Laborationer</a>
                     </li>
                     <li>
                         <div id="thisSide">
-                            <a class="thisSide" href="presentation.html">Presentation</a>
+                            <a class="presentation thisSide" href="presentation.html">Presentation</a>
                         </div>    
                     </li>
                     <li>
-                        <a href="kontakt.html">Kontakt</a>
+                        <a class="kontakt" href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>            
             </div>
