Nu är laboration 3 klar

--- a/pages/laborationer.html
+++ b/pages/laborationer.html
@@ -167,28 +167,28 @@
                         <tr>
                             <td rowspan="5">3 - Copycat</td>
                             <td>1</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-10-17</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-10-17</td>
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>Färdig</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-10-17</td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Ej påbörjad</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-10-17</td>
                         </tr>                
                         <tr>
                             <td>5</td>
-                            <td>Ej påbörjad</td>
-                            <td></td>
+                            <td>Godkänd</td>
+                            <td>2013-10-17</td>
                         </tr>
                     </tbody>
                     
